versions/3.3.1/docs/WorkspaceDetail.md
# WorkspaceDetail

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] [readonly] 
**production** | [**Production**](Production.md) |  | 
**volume** | [**Volume**](Volume.md) |  | [optional] 
**volume_path** | **str** |  | [optional] [readonly] 
**path** | **str** |  | [optional] [readonly] 
**sharing_nfs_permissions** | **object** |  | [optional] 
**full_path** | **str** |  | [optional] [readonly] 
**current_share_name** | **str** |  | [optional] [readonly] 
**endpoints** | [**list[WorkspaceEndpoint]**](WorkspaceEndpoint.md) |  | [optional] [readonly] 
**quota** | [**Quota**](Quota.md) |  | [optional] 
**size_used** | **int** |  | [optional] [readonly] 
**size_total** | **int** |  | [optional] [readonly] 
**bookmarked** | **bool** |  | [optional] [readonly] 
**resolved_permissions** | [**list[WorkspaceResolvedPermission]**](WorkspaceResolvedPermission.md) |  | [optional] [readonly] 
**resolved_read_only** | **bool** |  | [optional] [readonly] 
**recycle_bin_path** | **str** |  | [optional] [readonly] 
**name** | **str** |  | [optional] 
**directory** | **str** |  | [optional] [readonly] 
**description** | **str** |  | [optional] 
**long_description** | **str** |  | [optional] 
**is_template** | **bool** |  | [optional] 
**last_login** | **datetime** |  | [optional] [readonly] 
**active** | **bool** |  | [optional] 
**mac_protocol** | **str** |  | [optional] 
**win_protocol** | **str** |  | [optional] 
**win_drive** | **str** |  | [optional] 
**linux_protocol** | **str** |  | [optional] 
**linux_mountpoint** | **str** |  | [optional] 
**share_name** | **str** |  | [optional] 
**share_nfs** | **bool** |  | [optional] 
**share_afp** | **bool** |  | [optional] 
**sharing_hidden** | **bool** |  | [optional] 
**sharing_require_login** | **bool** |  | [optional] 
**sharing_read_only** | **bool** |  | [optional] 
**sharing_allow_execute** | **bool** |  | [optional] 
**quota_size_hard** | **int** |  | [optional] 
**quota_size_soft** | **int** |  | [optional] 
**affinity** | **str** |  | [optional] 
**emulate_avid** | **bool** |  | [optional] 
**emulate_capture** | **bool** |  | [optional] 
**emulate_preopen** | **bool** |  | [optional] 
**emulate_ntfs_streams** | **bool** |  | [optional] 
**emulate_recycle_bin** | **bool** |  | [optional] 
**emulate_fruit** | **bool** |  | [optional] 
**smb_extra_config** | **str** |  | [optional] 
**afp_extra_config** | **str** |  | [optional] 
**recycle_bin_exclude** | **str** |  | [optional] 
**is_external** | **bool** |  | [optional] 
**external_mac_url** | **str** |  | [optional] 
**external_win_url** | **str** |  | [optional] 
**external_linux_url** | **str** |  | [optional] 
**allow_symlinks** | **bool** |  | [optional] 
**rw_permission_priority** | **bool** |  | [optional] 
**template** | **int** |  | [optional] 
**home_for** | **int** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


